2014-07-23 Matt:
	* Adding TreeMaker tool which will make trees from G4 output.
	* Adding TrackTool. It compiles, but is untested!!!!

2014-07-09 Matt:
	* Adding track tool -- beginning of calculation of E-field from tracks

2014-07-08 Matt:
	* Committing scripts used for presenting at collaboration meeting.
	* Tagging first version: 00.01

2014-06-06 Matt:
	* Fixing bug in calculation of vector potential related to timing.
	* Committing scripts used to make plots, in case I need to make some while at ARENA

2014-05-30 Matt:
	* Adding scripts to plot the first results.
	* Still need to understand what is going on with the fourier transform...
	* Missing commit of SaveOutput and DataPoints.cxx!

2014-05-26 Matt:
	* Committing some updates forgotten on friday

2014-05-22 Matt:
	* Makefile now works
	* committing some updates related to how events are accessed in mixer
	* Committing updates to mixer, Analyze, detector, and DataPoints.
	* Committing Ana.cxx which will execute one configuration now. Need to add options
	* Everything compiles -- shower profiles look good.

2014-05-21 Matt:
	* Repurposing this package
	* Removing Geometry package
	* Adding include, src, run directory.  Nothing compiles yet!!
	* Committing some more code for the larger picture. Nothing runs yet, just skeleton.

2014-05-08 Matt:
	* Adding some code sketching out GeoMessenger and how to check objects in volumes.

2014-05-06 Matt:
	* Adding geometry directory structure and ChangeLog